[gd_scene format=3 uid="uid://bbjaxa7fm36al"]

[ext_resource type="Script" uid="uid://4g0savcfvayp" path="res://scenes/stairs/stairs_platform.gd" id="1_81j1p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dsfby"]
size = Vector2(20, 176.12347)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81j1p"]
size = Vector2(20, 213.21965)

[node name="StairsPlatform" type="StaticBody2D" unique_id=337554601]
script = ExtResource("1_81j1p")

[node name="StairCol" type="CollisionShape2D" parent="." unique_id=284257523]
position = Vector2(-15, -14.583)
rotation = -0.7853982
shape = SubResource("RectangleShape2D_dsfby")
debug_color = Color(0.5961406, 0.26255992, 0.017723668, 0.41960785)

[node name="DetectionZone" type="Area2D" parent="." unique_id=925983893]

[node name="StairCol2" type="CollisionShape2D" parent="DetectionZone" unique_id=692226599]
position = Vector2(0.9999981, -28.000004)
rotation = -0.7853982
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_81j1p")
debug_color = Color(0.43235886, 0.59260666, 0.32221547, 0.41960785)

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
